# ImageConverter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/image_formats/: CMakeLists.txt
src/image_formats/image_formats/pcx/: PCXFormat.h  PCXPalette16Color.h
src/image_types/: CMakeLists.txt
src/image_types/image_types/: Bitmap.h  PCX.h
src/utils/: CMakeLists.txt
src/utils/color_formats/: ColorFormats.h
